--- a/src/app/modules/landing-page/navbar/navbar.component.html
+++ b/src/app/modules/landing-page/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="layout-navbar">
-  <div class="content-wrapper container-xxl p-2 p-xl-0">
+  <div class="content-wrapper container-xl p-2 p-xl-0">
     <div class="content-body">
       <div class="navbar" [class]="{
         'navbar-active': window.scrollY > 10
