--- a/src/app/modules/landing-page/sections/section-statistics/section-statistics.component.html
+++ b/src/app/modules/landing-page/sections/section-statistics/section-statistics.component.html
@@ -8,7 +8,7 @@
             <div class="card-body">
               <kep-icon class="" color="primary" name="users" size="large-2" type="duotone"></kep-icon>
               <div
-                [countUp]="statistics.usersCount"
+                [countUp]="statistics?.usersCount"
                 [options]="{ enableScrollSpy: true, duration: 5 }"
                 class="count font-weight-bolder font-large-1">
               </div>
@@ -24,7 +24,7 @@
             <div class="card-body">
               <kep-icon class="" color="primary" name="problem" size="large-2" type="duotone"></kep-icon>
               <div
-                [countUp]="statistics.problemsCount"
+                [countUp]="statistics?.problemsCount"
                 [options]="{ enableScrollSpy: true, duration: 5 }"
                 class="count font-weight-bolder font-large-1">
               </div>
@@ -40,7 +40,7 @@
             <div class="card-body">
               <kep-icon class="" color="primary" name="competitions" size="large-2" type="duotone"></kep-icon>
               <div
-                [countUp]="statistics.contestsCount"
+                [countUp]="statistics?.contestsCount"
                 [options]="{ enableScrollSpy: true, duration: 5 }"
                 class="count font-weight-bolder font-large-1">
               </div>
@@ -56,7 +56,7 @@
             <div class="card-body">
               <kep-icon class="" color="primary" name="attempt" size="large-2" type="duotone"></kep-icon>
               <div
-                [countUp]="statistics.attemptsCount"
+                [countUp]="statistics?.attemptsCount"
                 [options]="{ enableScrollSpy: true, duration: 5 }"
                 class="count font-weight-bolder font-large-1">
               </div>
