--- a/src/app/modules/blog/post-detail/post-detail.component.html
+++ b/src/app/modules/blog/post-detail/post-detail.component.html
@@ -3,7 +3,7 @@
     <div class="card">
       <div class="card-body">
         <div class="post-header">
-          <h1 class="post-title">{{ blogPost.title }}</h1>
+          <h1 class="post-title text-dark">{{ blogPost.title }}</h1>
           <div class="post-image">
             <img src="{{ blogPost.image }}" alt="post-image">
           </div>
