--- a/src/app/modules/landing-page/sections/section-practice/section-practice.component.html
+++ b/src/app/modules/landing-page/sections/section-practice/section-practice.component.html
@@ -1,4 +1,5 @@
 <div class="practice-container">
+  <div class="bg-img"></div>
   <div class="mt-4 mb-2 content-wrapper container-xxl p-0">
     <div class="content-body text-center">
       <div class="row">
