[UI REFACTORING] landing page

--- a/src/app/modules/landing-page/landing-page.component.html
+++ b/src/app/modules/landing-page/landing-page.component.html
@@ -1,10 +1,15 @@
 <navbar></navbar>
-<section-header></section-header>
-<section-features></section-features>
-<section-practice></section-practice>
-<section-reviews></section-reviews>
-<section-statistics></section-statistics>
-<section-faq></section-faq>
-<section-get-started></section-get-started>
-<section-contact-us></section-contact-us>
+<div class="content-wrapper container-xxl p-0">
+  <div class="content-body">
+    <section-header></section-header>
+    <section-features></section-features>
+    <section-practice></section-practice>
+    <section-reviews></section-reviews>
+    <section-statistics></section-statistics>
+    <section-faq></section-faq>
+    <section-get-started></section-get-started>
+    <section-contact-us></section-contact-us>
+  </div>
+</div>
+
 <!--<section-footer></section-footer>-->
