--- a/src/app/modules/landing-page/sections/section-faq/section-faq.component.html
+++ b/src/app/modules/landing-page/sections/section-faq/section-faq.component.html
@@ -19,7 +19,7 @@
               <ngb-panel [cardClass]="'mt-1 collapse-margin'" [id]="'faq' + $index">
                 <ng-template ngbPanelTitle>
                   <div class="d-flex justify-content-between">
-                    <div class="font-weight-bolder">
+                    <div class="font-weight-bold">
                       {{ faq.question }}
                     </div>
                     <div class="text-dark">
