--- a/src/app/modules/landing-page/sections/section-contact-us/section-contact-us.component.html
+++ b/src/app/modules/landing-page/sections/section-contact-us/section-contact-us.component.html
@@ -1,4 +1,4 @@
-<div class="content-wrapper container-xxl p-0 mt-4 mb-2 pt-2">
+<div class="content-wrapper container-xxl p-0 mt-4 mb-2">
   <div class="content-body">
     <div class="text-center mb-1 pb-1">
       <span class="badge badge-light-primary">{{ 'ContactUs' | translate }}</span>
@@ -10,7 +10,7 @@
         <div class="contact-img-box position-relative border p-2 h-100">
           <img
             alt="contact-us"
-            class="contact-img w-100 scaleX-n1-rtl" src="https://demos.pixinvent.com/vuexy-html-admin-template/assets/img/front-pages/landing-page/contact-customer-service.png">
+            class="contact-img w-100 scaleX-n1-rtl" src="assets/landing-page/contact_us.svg">
           <div class="pt-3 px-2 pb-1">
             <div class="row gy-3 gx-md-4">
               <div class="col-md-6 col-lg-12 col-xl-6">
