--- a/src/app/modules/landing-page/sections/section-get-started/section-get-started.component.html
+++ b/src/app/modules/landing-page/sections/section-get-started/section-get-started.component.html
@@ -1,6 +1,7 @@
 <div class="get-started-container">
-  <div class="content-wrapper container-xxl">
-    <div class="content-body pt-2">
+  <div class="bg-img"></div>
+  <div class="content-wrapper container-xxl p-0">
+    <div class="content-body p-2">
       <div class="row">
         <div class="col-md-6 col-12" [ngClass.lt-md]="'text-center'">
           <h2 class="font-weight-bolder text-primary">
