--- a/src/app/modules/landing-page/sections/section-reviews/section-reviews.component.scss
+++ b/src/app/modules/landing-page/sections/section-reviews/section-reviews.component.scss
@@ -1,19 +1,15 @@
 @import 'styles/kep-imports';
 
 .reviews-container {
-  margin-left: -2rem;
-  width: calc(100% + 4rem);
+  margin-top: 4rem;
+  width: 100%;
   padding: 2rem 4rem;
   border-radius: 3.5rem 3.5rem 0 0;
-  background: linear-gradient($gray-50, mix($primary, $gray-50, 3));
+  background: rgba(255, 255, 255, 0.5);
 
   .content-body {
     margin-top: 4rem;
     margin-bottom: 4rem;
-  }
-
-  @include media-breakpoint-down(md){
-    width: calc(100% + 3.8rem);
   }
 
   @include dark-layout {
