--- a/src/app/styles/vuexy-extended/content.scss
+++ b/src/app/styles/vuexy-extended/content.scss
@@ -162,7 +162,7 @@ li[core-menu-horizontal-item] {
   backdrop-filter: blur(10px) !important;
 }
 
-a:hover {
+a:not(.btn, .dropdown-item):hover {
   color: $primary !important;
 
   @include dark-layout {
