--- a/src/app/modules/blog/components/blog-post-card/news-card/news-card.component.scss
+++ b/src/app/modules/blog/components/blog-post-card/news-card/news-card.component.scss
@@ -12,7 +12,7 @@
   }
 
   .post-image {
-    padding: 15px 18px;
+    padding: 15px 18px 15px 0;
     text-align: center; 
     object-fit: cover;
     border-bottom-right-radius: calc(0.428rem - 1px);
