--- a/src/@core/layout/components/navbar/navbar.component.html
+++ b/src/@core/layout/components/navbar/navbar.component.html
@@ -51,7 +51,7 @@
     <!--/ Toggle skin -->
   </div>
   <ul class="nav navbar-nav align-items-center ml-auto">
-    <li ngbDropdown class="nav-item dropdown dropdown-language mr-lg-0 mr-50">
+    <li ngbDropdown container="body" class="nav-item dropdown dropdown-language mr-lg-0 mr-50">
       <div class="nav-link dropdown-toggle cursor-pointer" id="dropdown-flag" ngbDropdownToggle>
         <i class="fi fi-{{ languageOptions[translateService.currentLang].flag }}"></i>
       </div>
