--- a/src/app/modules/challenges/pages/challenges/sections/section-quickstart/section-quickstart.component.html
+++ b/src/app/modules/challenges/pages/challenges/sections/section-quickstart/section-quickstart.component.html
@@ -35,7 +35,7 @@
     ></nouislider>
 
     <h5 class="mb-1">{{ 'Chapters' | translate }}</h5>
-    <ng-select [multiple]="true" [(ngModel)]="newChallengeCall.selectedChapters">
+    <ng-select appendTo="body" [multiple]="true" [(ngModel)]="newChallengeCall.selectedChapters">
       @for (chapter of chapters; track chapter) {
         <ng-option [value]="chapter.id">
           <span class="badge text-white bg-gradient-chapter-{{ chapter.id }}">
