--- a/src/app/modules/landing-page/navbar/navbar.component.html
+++ b/src/app/modules/landing-page/navbar/navbar.component.html
@@ -42,7 +42,7 @@
         </div>
 
         <div class="right">
-          <div ngbDropdown class="nav-item mr-lg-0 mr-50">
+          <div ngbDropdown container="body" class="nav-item mr-lg-0 mr-50">
             <div class="nav-link cursor-pointer" id="dropdown-flag" ngbDropdownToggle>
               <i class="fi fi-{{ languageOptions[translateService.currentLang].flag }}"></i>
             </div>
