--- a/src/@core/layout/components/navbar/navbar-daily-tasks/navbar-daily-tasks.component.html
+++ b/src/@core/layout/components/navbar/navbar-daily-tasks/navbar-daily-tasks.component.html
@@ -1,4 +1,4 @@
-<li ngbDropdown class="nav-item mr-lg-25 mr-50">
+<li ngbDropdown container="body" class="nav-item mr-lg-25 mr-50">
   <div class="nav-link text-dark d-flex align-items-center cursor-pointer" ngbDropdownToggle id="navbarDailyTasksDropdown" (click)="loadData()">
     <streak [streak]="streak" [maxStreak]="maxStreak"></streak>
   </div>
