--- a/src/app/modules/challenges/pages/challenge/question-card/question-card.component.html
+++ b/src/app/modules/challenges/pages/challenge/question-card/question-card.component.html
@@ -192,7 +192,7 @@
     @else if (question.type == QuestionType.PROBLEM) {
       <problem-body [problem]="question.problem"/>
 
-      <ng-select [formControl]="langControl">
+      <ng-select appendTo="body" [formControl]="langControl">
         @for (availableLanguage of question.problem.availableLanguages; track availableLanguage) {
           <ng-option [value]="availableLanguage.lang">{{ availableLanguage.langFull }}</ng-option>
         }
