--- a/src/@core/scss/base/core/menu/menu-types/horizontal-menu.scss
+++ b/src/@core/scss/base/core/menu/menu-types/horizontal-menu.scss
@@ -58,7 +58,7 @@
   }
   .header-navbar {
     background: $white;
-    z-index: 999 !important;
+    z-index: 10000000 !important;
     line-height: 1;
     min-height: auto;
     &.navbar-light {
