--- a/src/app/shared/third-part-modules/ng-select/ng-select.component.scss
+++ b/src/app/shared/third-part-modules/ng-select/ng-select.component.scss
@@ -14,6 +14,7 @@
 
 ng-dropdown-panel {
   background: inherit !important;
+  z-index: 10000 !important;
 }
 
 .ng-select-container, ng-dropdown-panel .ng-dropdown-panel-items {
