--- a/src/app/modules/problems/components/attempts-table/table/table.component.html
+++ b/src/app/modules/problems/components/attempts-table/table/table.component.html
@@ -87,9 +87,7 @@
         </td>
 
         <td class="ml-50">
-          <span class="badge badge-glow badge-{{ attempt.lang }}">
-            {{ attempt.langFull }}
-          </span>
+          <attempt-language [lang]="attempt.lang" [langFull]="attempt.langFull"/>
         </td>
 
         <td>
