--- a/src/@core/scss/base/plugins/extensions/ext-component-toastr.scss
+++ b/src/@core/scss/base/plugins/extensions/ext-component-toastr.scss
@@ -21,8 +21,11 @@
 }
 // Toast colors
 .toast {
-  background-color: $white;
+  background-color: rgba(255, 255, 255, 0.5);
+  border: 1px solid white;
   color: $body-color !important;
+  backdrop-filter: blur(5px);
+
   .toast-close-button {
     color: $body-color;
     font-size: 1.75rem;
@@ -60,7 +63,7 @@
 // we are using only few colors in toast so not adding in palette.scss
 // plugin class name 'error' is also differ then ours so not useful to add in palette
 .toast-success {
-  background: white !important;
+  background-color: rgba(255, 255, 255, 0.5) !important;
 
   .toast-title {
     color: $success;
@@ -74,7 +77,7 @@
   }
 }
 .toast-error {
-  background: white !important;
+  background-color: rgba(255, 255, 255, 0.5) !important;
 
   .toast-title {
     color: $danger;
@@ -88,7 +91,7 @@
   }
 }
 .toast-info {
-  background: white !important;
+  background-color: rgba(255, 255, 255, 0.5) !important;
 
   .toast-title {
     color: $info;
@@ -102,7 +105,7 @@
   }
 }
 .toast-warning {
-  background: white !important;
+  background-color: rgba(255, 255, 255, 0.5) !important;
 
   .toast-title {
     color: $warning;
